fix(FloatedNav): remove gap due to last changes in LanguageSwitches

--- a/src/QUI/Menu/Controls/FloatedNav.css
+++ b/src/QUI/Menu/Controls/FloatedNav.css
@@ -64,6 +64,7 @@
 /* lang switch */
 .quiqqer-floatedNav .quiqqer-bricks-languageswitch-flag {
     display: flex;
+    gap: 0;
     flex-direction: column;
     float: none;
     font-size: calc(0.75 * var(--quiqqer-floatedNav-fontSize));
